[tool.poetry]
name = "jira2confluence-gantt"
version = "0.3.0"
authors = ["Christophe Le Douarec <christophe.ledouarec@qorvo.com>"]
description = "Gantt chart generator from Jira to Confluence"
readme = "README.md"
repository = "https://github.com/cledouarec/jira2confluence-gantt"
license = "Apache-2.0"
keywords = [
  "project", 
  "management",
  "visualization",
  "gantt",
  "jira",
  "confluence",
  "atlassian"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
packages = [{include = "jira2confluencegantt"}]

[tool.poetry.dependencies]
python = "^3.11"
anytree = "^2.12.1"
atlassian-python-api = "^3.41.10"
Jinja2 = "^3.1.3"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.2"
pre-commit = "^3.6.2"
pylint = "^3.0.3"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
ruff = "^0.2.2"

[tool.poetry.scripts]
jira2confluence-gantt = "jira2confluence_gantt.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "jira2confluence_gantt/__init__.py:__version__",
    "pyproject.toml:^version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.ruff]
line-length = 79
