[metadata]
name = jira2confluence-gantt
version = 0.3.0
author = Christophe Le Douarec
author_email = ledouarec@gmail.com
description = Gantt chart generator from Jira to Confluence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cledouarec/jira2confluence-gantt
license = Apache License 2.0
license_files = LICENSE
keywords = jira confluence atlassian gantt chart
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Office/Business :: Scheduling
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    anytree
    atlassian-python-api
    Jinja2
    python-dateutil
    python-dotenv
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pre-commit
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    jira2confluence-gantt = jira2confluencegantt.cli:main

[aliases]
test=pytest

[flake8]
ignore = W503
max-line-length = 79
# max-complexity = 18
select = B,C,E,F,W,T4,B9
